# plane-opt-rgbd

./: .gitignore  .tags  LICENSE  README.md  plane-opt.sln  run_linux.sh
blur_estimation/: CMakeLists.txt
mesh_partition/: CMakeLists.txt  Readme.md  mesh_partition.vcxproj  mesh_partition.vcxproj.filters  partition.cpp  partition.h  qemquadrics.h
mesh_partition/heap/: MxDynBlock.h  MxHeap.cxx  gfx.h  mixmsg.h  stdmix.h
mesh_texture_opt/: main.cpp
mesh_visibility/: CMakeLists.txt  Readme.md  gbuffer.cpp  gbuffer.h  mesh_visibility.cpp  mesh_visibility.h  rendermode.frag  savemode.frag
mesh_visibility/glfw/: glfw3.lib
models/: Readme.md
models/apt0/: apt0_all-original-clusters4000-inner0.0002-border0.05-clean-opt-texture.mtl
models/copyroom/: copyroom_all-original-clusters3000-inner0.0002-border0.05-clean-opt-texture.mtl  copyroom_c2000_opt.mtl  copyroom_c2000_opt.ply
models/office0/: office0_all-original-clusters3000-inner0.0002-border0.05-clean-opt-texture.mtl
models/office1/: office1_all-original-clusters3000-inner0.0002-border0.05-clean-opt-texture.mtl
plane-opt/: .clang-format  .tags  ICL-NUIM-info.txt  build_linux.sh  run_linux.sh
plane-opt/blur_estimation/: blur_estimation.cpp  blur_estimation.h  main.cpp
plane-opt/common/: covariance.h  tools.h
plane-opt/mesh_partition/: CMakeLists.txt  covariance.cpp  covariance.h  main.cpp  mesh_partition.vcxproj  mesh_partition.vcxproj.filters  myheap.h  partition.cpp  partition.h  qemquadrics.cpp
plane-opt/mesh_partition/heap/: MxBlock.h  MxHeap.h
plane-opt/mesh_texture_opt/: CMakeLists.txt  main.cpp  mesh_opt.cpp  mesh_opt.h
plane-opt/mesh_visibility/: CMakeLists.txt  Readme.md  gbuffer.cpp  gl_util.h  main.cpp  mesh_visibility.cpp  mesh_visibility.sln  mesh_visibility.vcxproj  mesh_visibility.vcxproj.filters  rendermode.vert  rgbdmesh.cpp  rgbdmesh.h  savemode.vert  shader.h
plane-opt/mesh_visibility/glfw/: glfw3d.lib
supplemental_materials/: Readme.md  Readme.txt
supplemental_materials/models/lr_kt2/: room2_all-original-clusters1000-inner0.0002-border0.05-clean-opt-texture.mtl
supplemental_materials/models/of_kt2/: of_kt2_all-original-clusters1000-inner0.0002-border0.05-clean-opt-texture.mtl
supplemental_materials/models/office2/: office2_all-original-clusters3000-inner0.0002-border0.05-clean-opt-texture.mtl
supplemental_materials/models/office3/: office3_all-original-clusters3000-inner0.0002-border0.05-clean-opt-texture.mtl
